src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/OutOfTheOfficeSettings_OOOR__mdt.object-meta.xml
<CustomObject>
    <description
  >This Custom Metadata Object lets admins/users with required permission configure global settings for our OOO Handler. Example: What objects our handler should consider, if there should be a post to the record feed (requires chatter to be enabled) or if the record is active or not.
Demen S. 27th Oct 2020.</description>
    <label>Out of The Office Setting</label>
    <pluralLabel>Out of The Office Settings</pluralLabel>
</CustomObject>