src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/Active_OOOR__c.field-meta.xml
<CustomField>
    <fullName>Active_OOOR__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This field is being read by the oooh Apex Class and the corresponding object will be considered if this is set to true. It will be ignored if false.
Demen S. 27th Oct 2020.</description>
    <inlineHelpText
  >This checkbox defines if your object will be considered in the next oooh run or not.</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>