src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/FeedPost_OOOR__c.field-meta.xml
<CustomField>
    <fullName>FeedPost_OOOR__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This field defines if a feed post will be stamped or not. Please make sure that Chatter is enabled if feed posts are turned on.
Demen S. 27th Oct 2020.</description>
    <inlineHelpText
  >If checked, you must provide a Feed Post Message. Please note, Chatter is required for Feed Posts.</inlineHelpText>
    <label>Feed Post?</label>
    <type>Checkbox</type>
</CustomField>