src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/FeedPostMessage_OOOR__c.field-meta.xml
<CustomField>
    <fullName>FeedPostMessage_OOOR__c</fullName>
    <defaultValue
  >&quot;This record has been re-assigned, as the original owner is OOO.&quot;</defaultValue>
    <description
  >This content of this field will be used to stamp the message on the re-assigned record.
Demen S. 27th Oct. 2020.</description>
    <inlineHelpText
  >Please add your Post Message. Please note, Chatter is required for feed messages.</inlineHelpText>
    <label>Feed Post Message</label>
    <type>TextArea</type>
</CustomField>