src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/FieldName_OOOR__c.field-meta.xml
<CustomField>
    <fullName>FieldName_OOOR__c</fullName>
    <description
  >This field will be used to build the query in the Apex Class oooh_OutOfTheOfficeBatchable.
Demen S. 2nd Mar 2021</description>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>