src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/ObjectAPIName_OOOR__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName_OOOR__c</fullName>
    <description
  >This field will be used by an Apex Class, which will re-assign records on the above mentioned object, based on the created out of office logs.
Demen S. 27th Oct 2020.</description>
    <inlineHelpText
  >Please add you Object API Name e.g. Case or Custom_Object_OOOR__c</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>