src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/QueryFilter_OOOR__c.field-meta.xml
<CustomField>
    <fullName>QueryFilter_OOOR__c</fullName>
    <description
  >This field contains the query filter for example: ....WHERE Name = &apos;Sandy&apos;</description>
    <inlineHelpText
  >Values are being escaped. Therefore, do not add any quotation marks Example: (Good): Completed (Bad): &apos;Completed&apos;.</inlineHelpText>
    <label>Query Filter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>