src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/QueryParameter_OOOR__c.field-meta.xml
<CustomField>
    <fullName>QueryParameter_OOOR__c</fullName>
    <description
  >This field will be used to build the query in the Apex Class oooh_OutOfTheOfficeBatchable.
Demen S. 2nd Mar 2021</description>
    <label>Query Parameter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>=</label>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>=&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>