src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/fields/RecordType_OOOR__c.field-meta.xml
<CustomField>
    <fullName>RecordType_OOOR__c</fullName>
    <description
  >This field can be used to restrict the query to a certain record type.</description>
    <inlineHelpText>Please enter your record type API Name here with no quotes.
Example - Correct: Business_Case NOT Correct &apos;Business Case&apos;</inlineHelpText>
    <label>Record Type API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>