src/main/default/objects/OutOfTheOfficeSettings_OOOR__mdt/listViews/OutOfOfficeView.listView-meta.xml
<ListView>
    <fullName>OutOfOfficeView</fullName>
    <columns>MasterLabel</columns>
    <columns>ObjectAPIName_OOOR__c</columns>
    <columns>Active_OOOR__c</columns>
    <columns>FeedPost_OOOR__c</columns>
    <columns>FeedPostMessage_OOOR__c</columns>
    <columns>FieldName_OOOR__c</columns>
    <columns>QueryParameter_OOOR__c</columns>
    <columns>RecordType_OOOR__c</columns>
    <filterScope>Everything</filterScope>
    <label>Out of Office View</label>
</ListView>